--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<app-oferta-form></app-oferta-form>
-<hr>
-<app-oferta-list></app-oferta-list>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary px-4">
+  <a class="navbar-brand" href="#">Voluntariado</a>
+  <div class="navbar-nav">
+    <a class="nav-link" routerLink="/ofertas" routerLinkActive="active">Ofertas</a>
+    <a class="nav-link" routerLink="/publicar" routerLinkActive="active">Publicar</a>
+  </div>
+</nav>
+
+<div class="container mt-4">
+  <router-outlet></router-outlet>
+</div>
