Conexión a base de datos implementada

--- a/src/app/components/ofertas/oferta-list/oferta-list.component.html
+++ b/src/app/components/ofertas/oferta-list/oferta-list.component.html
@@ -1,7 +1,7 @@
 <h2 class="text-center my-4">Ofertas Publicadas</h2>
 <div class="container">
   <div class="row g-3">
-    <div class="col-md-6 col-lg-4" *ngFor="let o of servicio.obtenerOfertas()">
+    <div class="col-md-6 col-lg-4" *ngFor="let o of ofertas">
       <div class="card shadow-sm h-100">
         <div class="card-body">
           <h5 class="card-title">{{ o.descripcion }}</h5>
